--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,23 @@
-version: "3.9"
-
 services:
   formapp:
-    build: .
+    build:
+      context: ./formapp
     container_name: simple-form
     ports:
       - "8000:8000"
     volumes:
-      - .:/app
+      - submissions_data:/app/data
+    restart: always
+    depends_on:
+      - backend
+
+  backend:
+    build:
+      context: ./formback
+    container_name: json-storage
+    volumes:
+      - submissions_data:/app/data
     restart: always
 
+volumes:
+  submissions_data:
