--- a/nginx/default.conf/nginx.conf
+++ b/nginx/default.conf/nginx.conf
@@ -2,7 +2,7 @@ server {
     listen 80;
 
     # Serve frontend at root /
-    root /usr/share/nginx/html/frontend;
+    root /usr/share/nginx/html;
     index form.html;
 
     # Handle all frontend requests
@@ -11,8 +11,8 @@ server {
     }
 
     # Proxy API calls to backend
-    location /api {
-        proxy_pass http://backend:8000/;
+    location /api/ {
+        proxy_pass http://backend:5000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
     }
