--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,32 +1,25 @@
-version: "3.9"
+upstream backend {
+    server backend:5000;   
+}
 
-services:
-  frontend:
-    build:
-      context: ./formapp   # folder where frontend Dockerfile is
-    container_name: frontend
-    restart: always
-    ports:
-      - "8000:8000"
+server {
+    listen 80 default_server;
+    listen [::]:80 default_server;
 
-  backend:
-    build:
-      context: ./formback   # folder where backend Dockerfile is
-    container_name: backend
-    restart: always
-    ports:
-      - "5000:5000"
-  
-  nginx:
-    image: nginx:latest
-    container_name: nginx
-    ports:
-      - "8080:80"   # host port 8080 → container port 80
-    depends_on:
-      - frontend
-      - backend
+    server_name _;
 
-    volumes:
-      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
+    root /usr/share/nginx/html;
+    index form.html;
 
-    restart: always
+    location / {
+        try_files $uri $uri/ /form.html?$query_string;
+    }
+
+    location /api/ {
+        proxy_pass http://backend;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+        proxy_set_header Host $host;
+    }
+}
