--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,6 +27,6 @@ services:
       - backend
 
     volumes:
-      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
 
     restart: always
