file change default.conf

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -5,15 +5,11 @@ upstream backend {
 server {
     listen 80 default_server;
     listen [::]:80 default_server;
-
+    
+    index form.html form.htm index.nginx-debian.html;
     server_name _;
 
     root /usr/share/nginx/html;
-    index form.html;
-
-    location / {
-        try_files $uri $uri/ /form.html?$query_string;
-    }
 
     location /api/ {
         proxy_pass http://backend;
