file change to dockcompose

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -5,8 +5,8 @@ upstream backend {
 server {
     listen 80 default_server;
     listen [::]:80 default_server;
-    
-    index form.html form.htm index.nginx-debian.html;
+
+    index index.html index.htm index.nginx-debian.html;
     server_name _;
 
     root /usr/share/nginx/html;
