--- a/formback/Dockerfile
+++ b/formback/Dockerfile
@@ -2,10 +2,15 @@ FROM python:3.9-slim
 
 WORKDIR /app
 
-COPY server.py .
+# Copy server.py into /app
+COPY server.py /app/
 
+COPY submission.json /app/
+
+# Create a folder for data if your app writes files
 RUN mkdir -p /app/data
 
 EXPOSE 5000
 
 CMD ["python", "server.py"]
+
