--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,30 +1,13 @@
+version: "3.9"
 services:
   frontend:
-    build:
-      context: ./formapp   # folder where frontend Dockerfile is
-    container_name: frontend
-    restart: always
+    image: imagefront:latest
+    container_name: form_frontend
     ports:
-      - "8000:8000"
+      - "8080:8080"
 
   backend:
-    build:
-      context: ./formback   # folder where backend Dockerfile is
-    container_name: backend
-    restart: always
+    image: imageback:latest
+    container_name: form_backend
     ports:
       - "5000:5000"
-  
-  nginx:
-    image: nginx:latest
-    container_name: nginx
-    ports:
-      - "8080:80"   # host port 8080 → container port 80
-    depends_on:
-      - frontend
-      - backend
-
-    volumes:
-      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
-
-    restart: always
