--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,20 @@
-version: "3.9"
 services:
-  frontend:
-    image: imagefront:latest
-    container_name: form_frontend
+  nginx:
+    image: nginx:latest
+    container_name: nginx
     ports:
-      - "8080:8080"
+      - "8080:80"
+    volumes:
+      - ./formapp:/usr/share/nginx/html
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+    depends_on:
+      - backend
 
   backend:
-    image: imageback:latest
+    build: ./formback
     container_name: form_backend
     ports:
       - "5000:5000"
+    volumes:
+      - ./formback/submissions.json:/app/submissions.json
+
